--- a/branding/custom-stylesheet.css
+++ b/branding/custom-stylesheet.css
@@ -14,7 +14,7 @@
   top: 0px;
   left: 0px;
   min-height: 80px;
-  background-image: url("/dvn/assets/img/background_inep.png.png");
+  background-image: url("/dvn/assets/img/backgroud/background_ipen.jpg");
   background-size: 100% 80px;
 }
 
