--- a/branding/css/custom-stylesheet.css
+++ b/branding/css/custom-stylesheet.css
@@ -22,6 +22,11 @@
   top: 110px;
 }
 
+#breadCrumbPanel
+  {
+    margin-top: 100px;
+  }
+
 .navbar-header {
   background-color: #f78747;
   color: #fff;
